# dns2tcp-ab

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in
client/: Makefile.am  Makefile.in  auth.c  client.c  dns2tcprc  main.c  options.c  queue.c  requests.c  socket.c
client/includes/: auth.h  client.h  control.h  queue.h  requests.h  socket.h
common/: base64.c  config.c  dns.c  getopt.c  list.c  memdump.c
common/includes/: base64.h  debug.h  dns.h  list.h  my_config.h  myerror.h  mywin32.h  packet.h
man/: Makefile.am  Makefile.in  dns2tcpc.1  dns2tcpd.1
server/: Makefile.am  Makefile.in  auth.c  dns2tcpdrc  dns_decode.c  main.c  options.c  queue.c  requests.c  server.c  socket.c
server/includes/: auth.h  control.h  dns_decode.h  queue.h  requests.h  server.h  server_queue.h  socket.h
