bin_PROGRAMS = dns2tcpc 
INCLUDES = -I./includes/ -I../common/includes
CLEANFILES=*~
EXTRA_DIST = includes dns2tcprc
dns2tcpc_SOURCES =	\
			../common/config.c	\
			queue.c			\
			client.c		\
			../common/list.c	\
			../common/myrand.c	\
			auth.c	 		\
			../common/dns.c 	\
			../common/mystrnlen.c 	\
			requests.c 		\
			../common/memdump.c 	\
			../common/base64.c 	\
			socket.c 		\
			options.c 		\
			main.c


